# file2video

./: Cargo.toml  README.md
src/: args.rs  audio.rs  colors.rs  constants.rs  frames.rs  main.rs  misc.rs  process.rs  video.rs
