[package]
name = "file2video"
version = "1.1.1"
edition = "2024"
description = "Turns any given file into a video by interpreting it as raw audio and video streams."
license = "Apache-2.0"
repository = "https://github.com/FeatheredOrbit/file2video.git"

[dependencies]
ardftsrc = { version = "0.0.15", features = ["rayon"] }
clap = { version = "4.6.1", features = ["derive"] }
dasp_sample = "0.11.0"
ffmpeg-sidecar = "2.5.2"

[profile.release]
opt-level = 3
lto = "thin"           
codegen-units = 1      
strip = "symbols"      

